force-app/main/default/objects/nXBI__Business_Credit_Report__c/nXBI__Business_Credit_Report__c.object-meta.xml
<CustomObject>
    <label>Business Credit Report</label>
    <nameField>
        <displayFormat>BCR-{00000000}</displayFormat>
        <label>Business Credit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Credit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>