force-app/main/default/objects/nXBI__Business_Credit_Report__c/fields/nXBI__Account__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Credit Reports</relationshipLabel>
    <relationshipName>Business_Credit_Reports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>