force-app/main/default/objects/nXBI__Business_Credit_Report__c/fields/nXBI__Credit_Bureau_ID__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Credit_Bureau_ID__c</fullName>
    <label>Credit Bureau ID</label>
    <length>90</length>
    <type>Text</type>
</CustomField>