force-app/main/default/objects/nXBI__Business_Credit_Report__c/fields/nXBI__Credit_Bureau_Name__c.field-meta.xml
<CustomField>
    <fullName>nXBI__Credit_Bureau_Name__c</fullName>
    <label>Credit Bureau Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>